# aglio

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
src/aglio/: fmt.hpp  format.hpp  ostream.hpp  packager.hpp  serialization_buffers.hpp  serializer.hpp  type_descriptor.hpp
tests/: CMakeLists.txt  check_format.hpp  compile_fail_test.cmake  compile_fail_with_ref.cpp  compile_fail_with_struct_ref.cpp  packager.hpp  serializer.hpp  test.cpp  types.hpp
